implement account creation functionality with command and event handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=EVENT_SOURCING_CQRS_Spring_Axon
+
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/accounts_db
+spring.h2.console.enabled=true
+
+axon.serializer.events=jackson
+axon.serializer.general=jackson
+axon.serializer.messages=xstream
