--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=EVENT_SOURCING_CQRS_Spring_Axon
 
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/accounts_db
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/accounts_db
+#spring.h2.console.enabled=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/es-accounts_db}
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 axon.serializer.events=jackson
 axon.serializer.general=jackson
