--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,16 @@
 services:
-#  axonserver:
-#    image: 'axonid/axonserver:latest'
-#    environment:
-#      - 'AXONIQ_AXONSERVER_STANDALONE=TRUE'
-#    ports:
-#      - '8024:8024'
-#      - '8124:8124'
-#    networks:
-#      - accounts-net
+  axonserver:
+    image: 'axoniq/axonserver:latest-jdk-17-nonroot'
+    environment:
+      - 'AXONIQ_AXONSERVER_STANDALONE=TRUE'
+    ports:
+      - '8024:8024'
+      - '8124:8124'
+    networks:
+      - es-accounts-net
   postgres:
     image: 'postgres:16.11-alpine3.23'
+    container_name: es-postgres
     environment:
       - 'POSTGRES_DB=es-accounts_db'
       - 'POSTGRES_PASSWORD=admin'
@@ -20,9 +21,15 @@ services:
       - '5432:5432'
     networks:
       - es-accounts-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d es-accounts_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   pgadmin4:
     image: dpage/pgadmin4
+    container_name: es-pgadmin
     restart: always
     ports:
       - "8888:80"
@@ -33,6 +40,9 @@ services:
       - es-accounts_pgadmin_data:/var/lib/pgadmin
     networks:
       - es-accounts-net
+    depends_on:
+      postgres:
+        condition: service_healthy
 
 volumes:
   es-accounts_data:
